Added information for Java 11